@@ -1,3 +1,12 @@
+Fri Jan 16 15:35:21 2015  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/psych/lib/psych.rb: bump version
+
+	* ext/psych/lib/psych/visitors/yaml_tree.rb: fix line width wrapping
+	  for long strings.  Thanks Jakub Jirutka <jakub@jirutka.cz>
+
+	* test/psych/test_string.rb: test for change
+
 Fri Jan 16 11:44:44 2015  Kazuki Tsujimoto  <kazuki@callcc.net>
 
 	* eval_intern.h, vm.c, vm_eval.c, vm_insnhelper.c:
